--- a/styles/style.scss
+++ b/styles/style.scss
@@ -71,6 +71,7 @@ body {
     align-items: center;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 main {
@@ -89,11 +90,9 @@ main {
     grid-template-rows: 1fr 1fr 1fr;
     height: 100%;
     max-height: calc(min(100vh, #{$meter-height}));
-
     max-width: calc(min(100vw, #{$meter-width}));
     row-gap: $row-gap;
     width: 100%;
-    justify-items: stretch;
 
     .test-container {
         grid-area: test;
@@ -117,51 +116,33 @@ main {
     grid-area: test;
     box-sizing: border-box;
     background: var(--background-color-secondary);
+    align-content: center;
 }
 
 .pane-info {
     --padding: 1rem;
+    height: 100%;
+    width: 100%;
     padding: var(--padding);
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: left;
-    height: 100%;
-    width: 100%;
-
-    p {
-        font-size: 1.25rem;
-    }
+    
 
     h1,
     h2 {
         text-align: left;
-
-        // color: var(--ul-color-1);
-    }
-
-    h1 {
-        font-size: 3rem;
-    }
-
-    h2 {
-        font-size: 2rem;
     }
 
     hr {
         --main-color: white;
         width: calc(100% + var(--padding));
         margin-right: calc(-1 * var(--padding));
-        height: 0.1rem;
+        height: 0.1em;
         border-radius: 1rem;
         background-color: var(--main-color);
         border: none;
-    }
-
-    .icon-lg {
-        color: var(--color-secondary);
-        font-size: 5rem;
     }
 }
 
@@ -175,7 +156,7 @@ main {
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 100%;
+
 
     .info {
         $y: (1 - sin($ALPHA_0))/2 - 0.05;
@@ -194,7 +175,6 @@ main {
         position: absolute;
         align-items: center;
         right: 0;
-
         width: 75%;
 
         .test-kind {
@@ -205,6 +185,7 @@ main {
         .unit-container {
             grid-area: unit;
             margin: 0;
+            
             .unit {
                 bottom: var(--font-size-sm);
                 left: 100%;
@@ -264,7 +245,7 @@ main {
 }
 
 .unit-container {
-    --font-size-lg: 3.5em;
+    --font-size-lg: 3em;
     --font-size-sm: calc(var(--font-size-lg) / 4);
     --height: calc(var(--font-size-lg) + var(--font-size-sm));
 
@@ -292,47 +273,52 @@ main {
 
 @media all and (orientation: landscape) and (max-height: $screen-size-lg) {
     main {
-        // box-sizing: border-box;
-        column-gap: 1rem;
+        column-gap: $row-gap;
         grid-template-areas:
             "test info"
             "test button";
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
 
-        max-width: $meter-height;
-        max-height: $meter-width;
+        max-width: calc(min(100vw, #{$meter-height}));
+        max-height: calc(min(100vh, #{$meter-width}));
     }
 
     .test-info-progress-container {
         .test-info-container {
-            padding: 1rem;
             flex-direction: column;
+
             .info {
+                align-items: center;
                 flex-direction: row;
-                justify-content: space-between;
+
+                .test-kind {
+                    flex: 1;
+                }
+                .unit-container {
+                    flex: 1;
+                }
             }
         }
     }
 }
 
-@media all and (max-width: $screen-size-md) {
-    html,
-    body {
-        font-size: 0.95rem;
-    }
-}
+// @media all and (max-width: $screen-size-md) {
+//     html,
+//     body {
+//         font-size: 0.95rem;
+//     }
+// }
 
-@media all and (max-width: $screen-size-sm) {
-    html,
-    body {
-        font-size: 0.9rem;
-    }
-}
+// @media all and (max-width: $screen-size-sm) {
+//     html,
+//     body {
+//         font-size: 0.9rem;
+//     }
+// }
 
 @media all and (max-width: $screen-size-xs) {
-    html,
-    body {
-        font-size: 0.85rem;
+    html {
+        font-size: 0.95rem;
     }
 }
