--- a/styles/style.scss
+++ b/styles/style.scss
@@ -120,7 +120,7 @@ main {
 }
 
 .pane-info {
-    --padding: 1rem;
+    --padding: 1em;
     height: 100%;
     width: 100%;
     padding: var(--padding);
