--- a/styles/style.scss
+++ b/styles/style.scss
@@ -55,42 +55,46 @@ $ALPHA_0: $PI * 0.8;
     --border-radius-primary: 0.75rem;
 }
 
-html {
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+.hidden {
+    pointer-events: none;
+    visibility: hidden;
 }
+
+
 
 body {
     background: var(--background-color-primary);
     display: flex;
     justify-content: center;
-    width: 100%;
-    height: 100%;
     box-sizing: border-box;
     align-items: center;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+
+    font-family: var(--font-family-primary);
+    color: var(--font-color-primary);
 }
 
 main {
     box-sizing: border-box;
-    color: var(--font-color-primary);
+
     padding: $row-gap/2;
 
     display: grid;
-    font-family: var(--font-family-primary);
 
     grid-template-areas:
         "test"
         "info"
         "button";
 
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 2fr 0.5fr 0.5fr;
     height: 100%;
-    max-height: calc(min(100vh, #{$meter-height}));
-    max-width: calc(min(100vw, #{$meter-width}));
+    max-height: $meter-height;
+    max-width: $meter-width;
+
     row-gap: $row-gap;
     width: 100%;
 
@@ -114,9 +118,12 @@ main {
 .pane-container {
     border-radius: var(--border-radius-primary);
     grid-area: test;
-    box-sizing: border-box;
+    display: flex;
     background: var(--background-color-secondary);
-    align-content: center;
+    box-sizing: border-box;
+    flex-direction: column;
+    position: relative;
+    justify-content: center;
 }
 
 .pane-info {
@@ -153,16 +160,8 @@ main {
     }
 }
 
-.hidden {
-    pointer-events: none;
-    visibility: hidden;
-}
-
 .test-container {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+    // display: block;
 
     .info {
         $y: (1 - sin($ALPHA_0))/2 - 0.05;
@@ -318,8 +317,8 @@ main {
 //     }
 // }
 
-@media all and (max-width: $screen-size-xs) {
-    html {
-        font-size: 0.95rem;
-    }
-}
+// @media all and (max-width: $screen-size-xs) {
+//     html {
+//         font-size: 0.95rem;
+//     }
+// }
