--- a/styles/style.css
+++ b/styles/style.css
@@ -158,45 +158,50 @@
   visibility: hidden;
 }
 
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
-  background: var(--background-color-primary);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  width: 100%;
-  height: 100%;
-  font-family: var(--font-family-primary);
+  background: var(--background-color-primary);
   color: var(--font-color-primary);
+  font-family: var(--font-family-primary);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow-x: hidden;
 }
 
 main {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 0.5rem;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "test" "info" "button";
-  -ms-grid-rows: 2fr 0.5fr 0.5fr;
-      grid-template-rows: 2fr 0.5fr 0.5fr;
   height: 100%;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+      grid-template-areas: "test" "info" "button";
+  -ms-grid-rows: (3)[1fr];
+      grid-template-rows: repeat(1fr, 3);
   max-height: 64rem;
   max-width: 32rem;
   row-gap: 1rem;
-  width: 100%;
 }
 
 main .test-container {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: test;
@@ -209,55 +214,32 @@ main .test-info-progress-container {
 }
 
 main .start-btn-container {
-  -ms-grid-column-align: center;
-      justify-self: center;
+  height: 3rem;
+  width: 75%;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: button;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  height: 3rem;
-  width: 75%;
+  -ms-grid-column-align: center;
+      justify-self: center;
 }
 
 .pane-container {
+  background: var(--background-color-secondary);
   border-radius: var(--border-radius-primary);
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: test;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background: var(--background-color-secondary);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  position: relative;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 .pane-info {
-  --padding: 1em;
+  --padding: 1rem;
+  padding: var(--padding);
   height: 100%;
   width: 100%;
-  padding: var(--padding);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 .pane-info h1,
@@ -275,47 +257,53 @@ main .start-btn-container {
 
 .pane-info hr {
   --main-color: white;
-  width: calc(100% + var(--padding));
-  margin-right: calc(-1 * var(--padding));
   height: 0.1em;
-  border-radius: 1rem;
+  width: calc(100% + var(--padding));
   background-color: var(--main-color);
   border: none;
+  border-radius: 1rem;
+  margin-right: calc(-1 * var(--padding));
+}
+
+.test-container {
+  position: relative;
+  width: 100%;
 }
 
 .test-container .info {
-  background-color: var(--background-color-primary-dark);
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  bottom: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: calc(100% *0.15611);
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  left: 0;
-  margin: 0 auto;
   position: absolute;
+  margin: 0 auto;
+  height: calc(100% *0.15611);
+  width: 75%;
+  bottom: 0;
+  right: 0;
+  left: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  right: 0;
-  width: 75%;
+  background-color: var(--background-color-primary-dark);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .test-container .info .unit-container {
-  grid-area: unit;
+  --font-size-lg: 3rem;
   margin: 0;
+  grid-area: unit;
 }
 
 .test-container .info .unit-container .unit {
   bottom: var(--font-size-sm);
-  left: 100%;
   right: 0;
+  left: 100%;
 }
 
 .test-container .square-box {
@@ -326,19 +314,9 @@ main .start-btn-container {
 }
 
 .test-container .square-box canvas {
+  padding: 0.5rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 0.5rem;
-}
-
-.test-info-progress-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .test-info-container {
@@ -349,64 +327,82 @@ main .start-btn-container {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  padding: 1rem 0;
-  background: var(--background-color-secondary);
 }
 
 .test-info-container .info {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding: 0.25rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  text-align: center;
 }
 
 .test-info-container .info .test-kind {
-  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 0.25rem 0;
+  font-size: 1rem;
+}
+
+.test-info-container .info .unit-container {
+  padding: 0.5rem;
+  background: var(--background-color-secondary);
+  border-radius: var(--border-radius-primary);
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: left;
 }
 
 .progress-bar-container {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+  margin: 0.5rem 0;
+  height: 1rem;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  height: 1rem;
-  margin: 0.5rem 0;
-  position: relative;
-  width: 100%;
 }
 
 .progress-bar-container .progress-bar {
-  border-radius: 0;
   height: 1rem;
   width: 0;
+  border-radius: 0;
 }
 
 .unit-container {
-  --font-size-lg: 3em;
+  --font-size-lg: 2.5em;
   --font-size-sm: calc(var(--font-size-lg) / 4);
-  --height: calc(var(--font-size-lg) + var(--font-size-sm));
+  --height: calc(var(--font-size-lg) + 2 * var(--font-size-sm));
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: relative;
-  -webkit-transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
-  transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-bottom: var(--font-size-sm);
+  text-align: center;
+  -webkit-transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
+  transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
 }
 
 .unit-container.in-progress {
-  color: rgba(255, 255, 255, 0.11);
+  color: rgba(255, 255, 255, 0.25);
 }
 
 .unit-container .amount {
@@ -414,11 +410,7 @@ main .start-btn-container {
 }
 
 .unit-container .unit {
-  bottom: calc(-1 * var(--font-size-sm));
   font-size: var(--font-size-sm);
-  left: 0;
-  position: absolute;
-  right: 0;
 }
 
 @media all and (orientation: landscape) and (max-height: 992px) {
@@ -430,16 +422,23 @@ main .start-btn-container {
         grid-template-columns: 1fr 1fr;
     -ms-grid-rows: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-    max-width: calc(min(100vw, 64rem));
-    max-height: calc(min(100vh, 32rem));
+    max-height: 32rem;
+    max-width: 64rem;
   }
   .test-info-progress-container .test-info-container {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .test-info-progress-container .test-info-container .info {
+    width: 75%;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -452,10 +451,12 @@ main .start-btn-container {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
+    text-align: left;
   }
   .test-info-progress-container .test-info-container .info .unit-container {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
+    text-align: center;
   }
 }
