--- a/styles/style.css
+++ b/styles/style.css
@@ -196,12 +196,13 @@ main {
   max-height: 64rem;
   max-width: 32rem;
   row-gap: 1rem;
+  padding: 0.5rem;
 }
 
 main .test-container {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-flex-item-align: end;
+      -ms-grid-row-align: end;
+      align-self: end;
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: test;
@@ -267,10 +268,10 @@ main .start-btn-container {
 
 .test-container {
   position: relative;
-  width: 100%;
 }
 
 .test-container .info {
+  --border-radius: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -285,31 +286,27 @@ main .start-btn-container {
       -ms-flex-align: center;
           align-items: center;
   background-color: var(--background-color-primary-dark);
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
 .test-container .info .unit-container {
-  --font-size-lg: 3rem;
+  --font-size-lg: 3.5rem;
   margin: 0;
-  grid-area: unit;
-}
-
-.test-container .info .unit-container .unit {
-  bottom: var(--font-size-sm);
-  right: 0;
-  left: 100%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  margin-left: var(--font-size-sm);
 }
 
 .test-container .square-box {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: test;
   z-index: 1;
 }
 
@@ -344,9 +341,9 @@ main .start-btn-container {
 }
 
 .test-info-container .info .test-kind {
-  font-weight: bold;
   padding: 0.25rem 0;
   font-size: 1rem;
+  font-weight: bold;
 }
 
 .test-info-container .info .unit-container {
@@ -382,15 +379,13 @@ main .start-btn-container {
 }
 
 .unit-container {
-  --font-size-lg: 2.5em;
+  --font-size-lg: 2.5rem;
   --font-size-sm: calc(var(--font-size-lg) / 4);
-  --height: calc(var(--font-size-lg) + 2 * var(--font-size-sm));
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  margin: 0;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -425,6 +420,11 @@ main .start-btn-container {
     max-height: 32rem;
     max-width: 64rem;
   }
+  main .test-container {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
   .test-info-progress-container .test-info-container {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -438,6 +438,7 @@ main .start-btn-container {
             justify-content: center;
   }
   .test-info-progress-container .test-info-container .info {
+    margin: 0.25em;
     width: 75%;
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -446,6 +447,8 @@ main .start-btn-container {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+    background: var(--background-color-secondary);
+    border-radius: var(--border-radius-primary);
   }
   .test-info-progress-container .test-info-container .info .test-kind {
     -webkit-box-flex: 1;
