--- a/styles/style.css
+++ b/styles/style.css
@@ -153,11 +153,6 @@
   --border-radius-primary: 0.75rem;
 }
 
-.hidden {
-  pointer-events: none;
-  visibility: hidden;
-}
-
 html {
   height: 100%;
   width: 100%;
@@ -264,6 +259,43 @@ main .start-btn-container {
   border: none;
   border-radius: 1rem;
   margin-right: calc(-1 * var(--padding));
+}
+
+.modal {
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.705);
+  -webkit-transition: all ease-out 250ms;
+  transition: all ease-out 250ms;
+  z-index: 999;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+}
+
+.modal .modal-content {
+  opacity: 100%;
+  height: 75%;
+  width: 75%;
+}
+
+.modal.visible {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.hidden {
+  pointer-events: none;
+  visibility: hidden;
 }
 
 .test-container {
