--- a/styles/style.css
+++ b/styles/style.css
@@ -180,18 +180,18 @@ body {
 main {
   display: -ms-grid;
   display: grid;
+  padding: 0.5rem;
   height: 100%;
   width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  overflow-x: hidden;
       grid-template-areas: "test" "info" "button";
   -ms-grid-rows: (3)[1fr];
       grid-template-rows: repeat(1fr, 3);
   max-height: 64rem;
   max-width: 32rem;
+  overflow-x: hidden;
   row-gap: 1rem;
-  padding: 0.5rem;
 }
 
 main .test-container {
@@ -262,38 +262,38 @@ main .start-btn-container {
 }
 
 .modal {
-  height: 100%;
-  width: 100%;
-  pointer-events: none;
-  visibility: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: absolute;
   background-color: rgba(0, 0, 0, 0.705);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  pointer-events: none;
   -webkit-transition: all ease-out 250ms;
   transition: all ease-out 250ms;
+  visibility: hidden;
   z-index: 999;
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
 }
 
 .modal .modal-content {
-  opacity: 100%;
   height: 75%;
   width: 75%;
+  opacity: 100%;
 }
 
 .modal.visible {
-  visibility: visible;
   -webkit-transform: translateY(0);
           transform: translateY(0);
+  visibility: visible;
 }
 
 .hidden {
@@ -312,7 +312,7 @@ main .start-btn-container {
   display: flex;
   position: absolute;
   margin: 0 auto;
-  height: calc(100% *0.15611);
+  height: calc(100% *0.18111);
   width: 75%;
   bottom: 0;
   right: 0;
@@ -330,14 +330,14 @@ main .start-btn-container {
 
 .test-container .info .unit-container {
   --font-size-lg: 3.5rem;
-  margin: 0;
+  height: var(--font-size-lg);
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
   margin-left: var(--font-size-sm);
 }
 
@@ -383,11 +383,10 @@ main .start-btn-container {
 
 .test-info-container .info .unit-container {
   padding: 0.5rem;
+  height: 100%;
+  width: 100%;
   background: var(--background-color-secondary);
   border-radius: var(--border-radius-primary);
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
   text-align: left;
 }
 
@@ -396,7 +395,6 @@ main .start-btn-container {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  margin: 0.5rem 0;
   height: 1rem;
   width: 100%;
   -webkit-box-sizing: border-box;
@@ -416,16 +414,19 @@ main .start-btn-container {
 .unit-container {
   --font-size-lg: 2.5rem;
   --font-size-sm: calc(var(--font-size-lg) / 4);
+  --height: calc(var(--font-size-lg) + var(--font-size-sm));
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
   margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-bottom: var(--font-size-sm);
+  min-height: var(--height);
   text-align: center;
   -webkit-transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
   transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
@@ -436,6 +437,7 @@ main .start-btn-container {
 }
 
 .unit-container .amount {
+  height: var(--font-size-lg);
   font-size: var(--font-size-lg);
 }
 
@@ -468,22 +470,22 @@ main .start-btn-container {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
   }
   .test-info-progress-container .test-info-container .info {
     margin: 0.25em;
+    padding: 0.25rem 0.5rem;
     width: 75%;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    background: var(--background-color-secondary);
+    border-radius: var(--border-radius-primary);
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    background: var(--background-color-secondary);
-    border-radius: var(--border-radius-primary);
   }
   .test-info-progress-container .test-info-container .info .test-kind {
     -webkit-box-flex: 1;
