--- a/styles/style.scss
+++ b/styles/style.scss
@@ -75,10 +75,10 @@ body {
 
 main {
     display: grid;
+    padding: $row-gap/2;
     height: 100%;
     width: 100%;
     box-sizing: border-box;
-    overflow-x: hidden;
 
     grid-template-areas:
         "test"
@@ -89,9 +89,9 @@ main {
     max-height: $meter-height;
 
     max-width: $meter-width;
+    overflow-x: hidden;
 
     row-gap: $row-gap;
-    padding: $row-gap/2;
 
     .test-container {
         align-self: end;
@@ -149,29 +149,29 @@ main {
 }
 
 .modal {
+    display: flex;
+    position: absolute;
     height: 100%;
     width: 100%;
-    pointer-events: none;
-    visibility: hidden;
-    display: flex;
-    justify-content: center;
+
+    transform: translateY(-100%);
     align-items: center;
-    position: absolute;
     background-color: rgba(0, 0, 0, 0.705);
+    justify-content: center;
+    pointer-events: none;
     transition: all ease-out 250ms;
+    visibility: hidden;
     z-index: 999;
 
     .modal-content {
-        opacity: 100%;
         height: 75%;
         width: 75%;
+        opacity: 100%;
     }
 
-    transform: translateY(-100%);
-
     &.visible {
-        visibility: visible;
         transform: translateY(0);
+        visibility: visible;
     }
 }
 
@@ -185,7 +185,7 @@ main {
 
     .info {
         --border-radius: 1rem;
-        $y: (1 - sin($ALPHA_0))/2 - 0.05;
+        $y: (1 - sin($ALPHA_0))/2 - 0.025;
         display: flex;
         position: absolute;
         margin: 0 auto;
@@ -204,10 +204,9 @@ main {
 
         .unit-container {
             --font-size-lg: 3.5rem;
-            margin: 0;
-            flex-direction: row;
+            height: var(--font-size-lg);
             align-items: baseline;
-
+            flex-direction: row;
             margin-left: var(--font-size-sm);
         }
     }
@@ -229,21 +228,24 @@ main {
     .info {
         display: flex;
         padding: 0.25rem;
-
         flex: 1;
         flex-direction: column;
 
         .test-kind {
             padding: 0.25rem 0;
+
             font-size: 1rem;
             font-weight: bold;
         }
 
         .unit-container {
             padding: 0.5rem;
+            height: 100%;
+            width: 100%;
+
             background: var(--background-color-secondary);
             border-radius: var(--border-radius-primary);
-            flex: 1;
+
             text-align: left;
         }
     }
@@ -252,7 +254,6 @@ main {
 .progress-bar-container {
     display: flex;
     position: relative;
-    margin: 0.5rem 0;
     height: 1rem;
     width: 100%;
     box-sizing: border-box;
@@ -268,12 +269,14 @@ main {
 .unit-container {
     --font-size-lg: 2.5rem;
     --font-size-sm: calc(var(--font-size-lg) / 4);
-    display: flex;
+    --height: calc(var(--font-size-lg) + var(--font-size-sm));
 
+    display: flex;
     position: relative;
     margin: 0;
+    box-sizing: border-box;
     flex-direction: column;
-    margin-bottom: var(--font-size-sm);
+    min-height: var(--height);
     text-align: center;
 
     transition: color cubic-bezier(0.09, 0.91, 0.5, 1.1) 1000ms;
@@ -283,6 +286,7 @@ main {
     }
 
     .amount {
+        height: var(--font-size-lg);
         font-size: var(--font-size-lg);
     }
 
@@ -311,21 +315,24 @@ main {
         .test-info-container {
             align-items: center;
             flex-direction: column;
-            justify-content: center;
 
             .info {
                 margin: 0.25em;
+                padding: 0.25rem 0.5rem;
                 width: 75%;
+
                 align-items: center;
-                flex-direction: row;
                 background: var(--background-color-secondary);
                 border-radius: var(--border-radius-primary);
+                box-sizing: border-box;
+                flex-direction: row;
 
                 .test-kind {
                     flex: 1;
                     text-align: left;
                 }
                 .unit-container {
+                    // --font-size-lg: 3.5rem;
                     flex: 1;
                     text-align: center;
                 }
