--- a/styles/style.css
+++ b/styles/style.css
@@ -462,6 +462,12 @@ main .start-btn-container {
         grid-template-rows: 1fr 1fr;
     max-height: 32rem;
     max-width: 64rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   main .test-container {
     -ms-flex-item-align: center;
