--- a/styles/style.css
+++ b/styles/style.css
@@ -76,8 +76,9 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  position: relative;
   border: none;
+  height: 100%;
+  width: 100%;
 }
 
 .start-btn.running {
@@ -85,7 +86,6 @@
 }
 
 .btn-prime {
-  position: relative;
   overflow: hidden;
   border: none;
   background-image: none;
@@ -221,6 +221,7 @@ main .start-btn-container {
   grid-area: button;
   -ms-grid-column-align: center;
       justify-self: center;
+  position: relative;
 }
 
 .pane-container {
@@ -367,19 +368,27 @@ main .start-btn-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 0.25rem;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
 }
 
+.test-info-progress-container .test-info-container .info:nth-child(1) {
+  margin-left: 0;
+}
+
+.test-info-progress-container .test-info-container .info:nth-child(n) {
+  margin-right: 0;
+}
+
 .test-info-progress-container .test-info-container .info .test-kind {
   padding: 0.25rem 0;
-  font-size: 1rem;
   font-weight: bold;
 }
 
@@ -455,24 +464,18 @@ main .start-btn-container {
   main {
     -webkit-column-gap: 1rem;
             column-gap: 1rem;
-        grid-template-areas: "test info" "test button";
+        grid-template-areas: "test info" "button button";
+    max-width: 100%;
+    max-height: 100%;
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-    max-height: 32rem;
-    max-width: 64rem;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-grid-rows: 0.8fr 0.2fr;
+        grid-template-rows: 0.8fr 0.2fr;
   }
   main .test-container {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+    -ms-flex-item-align: start;
+        -ms-grid-row-align: start;
+        align-self: start;
   }
   .test-info-progress-container .test-info-container {
     -webkit-box-align: center;
@@ -484,9 +487,11 @@ main .start-btn-container {
             flex-direction: column;
   }
   .test-info-progress-container .test-info-container .info {
-    margin: 0.25em;
     padding: 0.25rem 0.5rem;
-    width: 75%;
+    margin: 0;
+    width: 100%;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -498,6 +503,12 @@ main .start-btn-container {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+  }
+  .test-info-progress-container .test-info-container .info:nth-child(1) {
+    margin-top: 0;
+  }
+  .test-info-progress-container .test-info-container .info:nth-child(n) {
+    margin-bottom: 0;
   }
   .test-info-progress-container .test-info-container .info .test-kind {
     -webkit-box-flex: 1;
