--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -79,6 +79,28 @@
     }
 }
 
+@mixin space-between-column($gap) {
+    margin-top: $gap;
+    margin-bottom: $gap;
+    &:nth-child(1) {
+        margin-top: 0;
+    }
+    &:nth-child(n) {
+        margin-bottom: 0;
+    }
+}
+
+@mixin space-between-row($gap) {
+    margin-left: $gap;
+    margin-right: $gap;
+    &:nth-child(1) {
+        margin-left: 0;
+    }
+    &:nth-child(n) {
+        margin-right: 0;
+    }
+}
+
 @include attr-x("max-height", 4, 25, "vh", "mvh");
 @include attr-x("max-width", 4, 25, "vw", "mvw");
 
@@ -112,11 +134,6 @@
     align-items: center;
     background-color: var(--color-secondary);
 
-    // background-image: linear-gradient(
-    //     to right,
-    //     var(--ul-color-1),
-    //     var(--dl-color-1)
-    // );
     border-radius: var(--border-radius-primary);
     color: black;
     cursor: pointer;
@@ -124,8 +141,9 @@
     font-size: 2em;
     font-weight: normal;
     justify-content: center;
-    position: relative;
     border: none;
+    height: 100%;
+    width: 100%;
 
     &.running {
         background-color: var(--dl-color-2);
@@ -136,7 +154,6 @@
 }
 
 .btn-prime {
-    position: relative;
     overflow: hidden;
     border: none;
     background-image: none;
