--- a/styles/style.css
+++ b/styles/style.css
@@ -462,11 +462,11 @@ main .start-btn-container {
   main {
     -webkit-column-gap: 1rem;
             column-gap: 1rem;
-        grid-template-areas: "test info" "button button";
+        grid-template-areas: "test info" "test button";
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 0.8fr 0.2fr;
-        grid-template-rows: 0.8fr 0.2fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
     max-height: calc(min(32rem, 100%));
     max-width: calc(min(64rem, 100%));
   }
