--- a/styles/utils.css
+++ b/styles/utils.css
@@ -71,7 +71,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 2em;
+  font-size: 1.5rem;
   font-weight: normal;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
