--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 2em;
+  font-size: 1.5rem;
   font-weight: normal;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -127,7 +127,7 @@
 :root {
   --background-color-primary: rgba(51, 51, 51, 1);
   --background-color-primary-dark: rgb(37, 37, 37);
-  --background-color-secondary: rgb(66, 66, 66, 1);
+  --background-color-secondary: rgb(61, 61, 61, 1);
   --font-color-primary: #fff;
   --color-primary: #fff;
   --color-secondary: #34c83c;
@@ -153,6 +153,7 @@
   --ncsu-red: #c00;
   --ncsu-red-dark: rgb(173, 0, 0);
   --border-radius-primary: 0.75rem;
+  --box-shadow-main: 5px 0px 20px 0px rgba(0, 0, 0, 0.25);
 }
 
 html {
@@ -164,6 +165,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   margin: 0;
   padding: 0;
   -webkit-box-align: center;
@@ -175,7 +177,6 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  position: relative;
   min-height: 100%;
   min-width: 100%;
 }
@@ -193,7 +194,6 @@ main {
       grid-template-rows: repeat(1fr, 3);
   max-height: calc(min(64rem, 100%));
   max-width: calc(min(32rem, 100%));
-  overflow-x: hidden;
   row-gap: 1rem;
 }
 
@@ -237,6 +237,8 @@ main .start-btn-container {
   padding: var(--padding);
   height: 100%;
   width: 100%;
+  -webkit-box-shadow: var(--box-shadow-main);
+          box-shadow: var(--box-shadow-main);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -269,6 +271,7 @@ main .start-btn-container {
   display: -ms-flexbox;
   display: flex;
   position: absolute;
+  width: 100%;
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
   -webkit-box-align: center;
@@ -279,7 +282,6 @@ main .start-btn-container {
       -ms-flex-pack: center;
           justify-content: center;
   min-height: 100%;
-  width: 100%;
   -webkit-transition: all ease-out 250ms;
   transition: all ease-out 250ms;
   visibility: hidden;
@@ -476,6 +478,10 @@ main .start-btn-container {
         -ms-grid-row-align: start;
         align-self: start;
   }
+  .test-info-progress-container {
+    width: 75%;
+    margin: auto;
+  }
   .test-info-progress-container .test-info-container {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -487,13 +493,10 @@ main .start-btn-container {
   }
   .test-info-progress-container .test-info-container .info {
     margin: 0;
-    padding: 0.25rem 0.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     width: 100%;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background: var(--background-color-secondary);
-    border-radius: var(--border-radius-primary);
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     -webkit-box-orient: horizontal;
@@ -510,12 +513,26 @@ main .start-btn-container {
     margin-bottom: 0;
   }
   .test-info-progress-container .test-info-container .info .test-kind {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0 0.25rem;
+    padding: 0.5rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    font-size: 1.25rem;
     text-align: left;
+    background: var(--background-color-secondary);
+    border-radius: var(--border-radius-primary);
   }
   .test-info-progress-container .test-info-container .info .unit-container {
+    margin: 0 0.25rem;
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
