--- a/styles/utils.scss
+++ b/styles/utils.scss
@@ -138,7 +138,7 @@
     color: black;
     cursor: pointer;
     display: flex;
-    font-size: 2em;
+    font-size: 1.5rem;
     font-weight: normal;
     justify-content: center;
     border: none;
